search for creators

--- a/html/popular.html
+++ b/html/popular.html
@@ -133,12 +133,12 @@
 
         <p class="font-bold text-3xl mt-8 dark:text-white">Latest Hits:</p>
 
-            <div class="grid grid-flow-row w-full mx-auto mt-5">
+            <div class="grid grid-flow-row w-full mx-auto mt-5 mb-7">
                 <div class="grid mx-auto md:mx-0">
-                  <div class="grid grid-flow-row w-72">
+                  <div class="flex flex-col w-72">
                       <div class="relative my-4">
                         <div class="relative"><img class="h-72 object-cover aspect-square" id="mostPopularCover" src="" alt="Most popular work"></div>
-                        <p class="absolute top-0 left-0 text-5xl m-4 text-black ">1</p>
+                        <p class="absolute top-0 left-0 text-5xl m-4 text-white bg-black p-1 ">1</p>
                       </div>
                     <div class="grid grid-flow-row">
                         <div class="text-gray-400 text-sm mt-1"><a id="mostPopularGenre1"></a><span class="mx-1">,</span><a id="mostPopularGenre2"></a></div>
@@ -147,6 +147,7 @@
                         <div class="text-gray-600 text-left mt-1" id="mostPopularSummary"></div>
 
                   </div>
+                </div>
   
   
                   </div>
