--- a/html/Csearch.html
+++ b/html/Csearch.html
@@ -133,10 +133,10 @@
   })</script>
 </nav>
 <header class="flex dark:bg-background mt-2 border-t-0 border-x-0 dark:border-none w-screen items-center text-center justify-center gap-7 border h-16 z-40">
-  <p id="filterAll" class="filterActive text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">ALL</p>
-  <p id="filterNovels" class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Novels</p>
-  <p id="filterComics" class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Comics</p>
-  <a href="/Csearch" class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Creators</a>
+  <a href="/search" id="filterAll" class="filterActive text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">ALL</a>
+  <a  href="/search" id="filterNovels" class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Novels</a>
+  <a  href="/search" id="filterComics" class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Comics</a>
+  <p class="rounded-md px-3 font-bold  bg-black dark:bg-white text-white uppercase hover:underline cursor-pointer dark:text-black">Creators</p>
 </header>
 
 <!-- component -->
@@ -152,11 +152,11 @@
             </div>
             <nav :class="isOpen ? '' : 'hidden'" class="sm:flex sm:justify-center sm:items-center mt-4">
                 <div class="flex flex-col sm:flex-row">
-                    <a class="mt-3 text-gray-600 dark:text-gray-100 hover:underline sm:mx-3 sm:mt-0" href="#">Horror</a>
-                    <a class="mt-3 text-gray-600 dark:text-gray-100 hover:underline sm:mx-3 sm:mt-0" href="#">Comedy</a>
-                    <a class="mt-3 text-gray-600 dark:text-gray-100 hover:underline sm:mx-3 sm:mt-0" href="#">some genre</a>
-                    <a class="mt-3 text-gray-600 dark:text-gray-100 hover:underline sm:mx-3 sm:mt-0" href="#">uwu</a>
-                    <a class="mt-3 text-gray-600 dark:text-gray-100 hover:underline sm:mx-3 sm:mt-0" href="#">hentai</a>
+                    <a class="mt-3 text-gray-600 dark:text-gray-100 hover:underline sm:mx-3 sm:mt-0" href="#">Artist</a>
+                    <a class="mt-3 text-gray-600 dark:text-gray-100 hover:underline sm:mx-3 sm:mt-0" href="#">Writer</a>
+                    <a class="mt-3 text-gray-600 dark:text-gray-100 hover:underline sm:mx-3 sm:mt-0" href="#">Popular</a>
+                    <a class="mt-3 text-gray-600 dark:text-gray-100 hover:underline sm:mx-3 sm:mt-0" href="#">Most Works</a>
+                    <a class="mt-3 text-gray-600 dark:text-gray-100 hover:underline sm:mx-3 sm:mthentai-0" href="#"></a>
                 </div>
             </nav>
             <div class="relative mt-6 max-w-lg mx-auto">
@@ -175,100 +175,111 @@
       <img class="aspect-square object-cover object-center" src="${cover}" >
     </div>     
 <div class="h-fit"></div>
+		<!-- the card -->
+        <a href="http://localhost:7001/user/MaxTGM">
+		<div class="max-w-3xl w-full mx-auto z-10">
+            <div class="flex flex-col">
+                <div class="bg-white border border-white shadow-lg  rounded-3xl p-4 m-4">
+                    <div class="flex-none sm:flex">
+                        <div class=" relative h-32 w-32   sm:mb-0 mb-3">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimg00.deviantart.net%2F1614%2Fi%2F2011%2F273%2F8%2F5%2Felectric_dragon_by_insanable-d4bczwp.jpg&f=1&nofb=1" alt="aji" class=" w-32 h-32 object-cover rounded-2xl">
+                        </div>
+                        <div class="flex-auto sm:ml-5 justify-evenly">
+                            <div class="flex items-center justify-between sm:mt-2">
+                                <div class="flex items-center">
+                                    <div class="flex flex-col">
+                                        <div class="w-full flex-none text-lg text-gray-800 font-bold leading-none">Electric Dragon</div>
+                                        <span class="mr-3  font-bold text-blue-500 ">Aritist</span>
+                                            <!-- <span class="mr-3 border-r border-gray-200  max-h-0"></span><span>Cochin, IND</span> -->
+                                        <div class="flex-auto text-gray-500 my-1">
+                                            <span class="mr-3 ">Description.</span>
+                                            <!-- <span class="mr-3 border-r border-gray-200  max-h-0"></span><span>Cochin, IND</span> -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                                <div class="flex pt-2  text-sm text-gray-500">
+                                    <div class="flex-1 inline-flex items-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20"
+                                            fill="currentColor">
+                                            <path
+                                                d="M8 9a3 3 0 100-6 3 3 0 000 6zM8 11a6 6 0 016 6H2a6 6 0 016-6zM16 7a1 1 0 10-2 0v1h-1a1 1 0 100 2h1v1a1 1 0 102 0v-1h1a1 1 0 100-2h-1V7z">
+                                            </path>
+                                        </svg>
+                                        <p class="">1.2k Followers</p>
+                                    </div>
+                                    <div class="flex-1 inline-flex items-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20"
+                                            fill="currentColor">
+                                            <path fill-rule="evenodd"
+                                                d="M12.395 2.553a1 1 0 00-1.45-.385c-.345.23-.614.558-.822.88-.214.33-.403.713-.57 1.116-.334.804-.614 1.768-.84 2.734a31.365 31.365 0 00-.613 3.58 2.64 2.64 0 01-.945-1.067c-.328-.68-.398-1.534-.398-2.654A1 1 0 005.05 6.05 6.981 6.981 0 003 11a7 7 0 1011.95-4.95c-.592-.591-.98-.985-1.348-1.467-.363-.476-.724-1.063-1.207-2.03zM12.12 15.12A3 3 0 017 13s.879.5 2.5.5c0-1 .5-4 1.25-4.5.5 1 .786 1.293 1.371 1.879A2.99 2.99 0 0113 13a2.99 2.99 0 01-.879 2.121z"
+                                                clip-rule="evenodd"></path>
+                                        </svg>
+                                        <p class="">14 Works</p>
+                                    </div>
+
+                                    <button  class="flex-no-shrink bg-green-400 hover:bg-green-500 px-5 ml-4 py-2 text-xs shadow-sm hover:shadow-lg font-medium tracking-wider border-2 border-green-300 hover:border-green-500 text-white rounded-full transition ease-in duration-300">Request</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </a>
+        <a href="http://localhost:7001/user/MaxTGM">
+            <div class="max-w-3xl w-full mx-auto z-10">
+                <div class="flex flex-col">
+                    <div class="bg-white border border-white shadow-lg  rounded-3xl p-4 m-4">
+                        <div class="flex-none sm:flex">
+                            <div class=" relative h-32 w-32   sm:mb-0 mb-3">
+                                <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimg00.deviantart.net%2F1614%2Fi%2F2011%2F273%2F8%2F5%2Felectric_dragon_by_insanable-d4bczwp.jpg&f=1&nofb=1" alt="aji" class=" w-32 h-32 object-cover rounded-2xl">
+                            </div>
+                            <div class="flex-auto sm:ml-5 justify-evenly">
+                                <div class="flex items-center justify-between sm:mt-2">
+                                    <div class="flex items-center">
+                                        <div class="flex flex-col">
+                                            <div class="w-full flex-none text-lg text-gray-800 font-bold leading-none">Electric Dragon</div>
+                                            <span class="mr-3  font-bold text-blue-500 ">Writer</span>
+                                                <!-- <span class="mr-3 border-r border-gray-200  max-h-0"></span><span>Cochin, IND</span> -->
+                                            <div class="flex-auto text-gray-500 my-1">
+                                                <span class="mr-3 ">Description.</span>
+                                                <!-- <span class="mr-3 border-r border-gray-200  max-h-0"></span><span>Cochin, IND</span> -->
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                    <div class="flex pt-2  text-sm text-gray-500">
+                                        <div class="flex-1 inline-flex items-center">
+                                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20"
+                                                fill="currentColor">
+                                                <path
+                                                    d="M8 9a3 3 0 100-6 3 3 0 000 6zM8 11a6 6 0 016 6H2a6 6 0 016-6zM16 7a1 1 0 10-2 0v1h-1a1 1 0 100 2h1v1a1 1 0 102 0v-1h1a1 1 0 100-2h-1V7z">
+                                                </path>
+                                            </svg>
+                                            <p class="">1.2k Followers</p>
+                                        </div>
+                                        <div class="flex-1 inline-flex items-center">
+                                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20"
+                                                fill="currentColor">
+                                                <path fill-rule="evenodd"
+                                                    d="M12.395 2.553a1 1 0 00-1.45-.385c-.345.23-.614.558-.822.88-.214.33-.403.713-.57 1.116-.334.804-.614 1.768-.84 2.734a31.365 31.365 0 00-.613 3.58 2.64 2.64 0 01-.945-1.067c-.328-.68-.398-1.534-.398-2.654A1 1 0 005.05 6.05 6.981 6.981 0 003 11a7 7 0 1011.95-4.95c-.592-.591-.98-.985-1.348-1.467-.363-.476-.724-1.063-1.207-2.03zM12.12 15.12A3 3 0 017 13s.879.5 2.5.5c0-1 .5-4 1.25-4.5.5 1 .786 1.293 1.371 1.879A2.99 2.99 0 0113 13a2.99 2.99 0 01-.879 2.121z"
+                                                    clip-rule="evenodd"></path>
+                                            </svg>
+                                            <p class="">14 Works</p>
+                                        </div>
+    
+                                        <button  class="flex-no-shrink bg-green-400 hover:bg-green-500 px-5 ml-4 py-2 text-xs shadow-sm hover:shadow-lg font-medium tracking-wider border-2 border-green-300 hover:border-green-500 text-white rounded-full transition ease-in duration-300">Request</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </a>
     <main class="my-8">
         <div class="container mx-auto px-6">
-            <div id="searchResults" class="grid gap-2 grid-flow-col">
-                <!-- <div class="max-w-2xl bg-white border-2 border-gray-300 p-5 rounded-md tracking-wide shadow-lg">
-                    <div id="header" class="grid grid-flow-col"> 
-                        <div class="object-cover aspect-square bg-gray-200 aspect-w-1 aspect-h-1 rounded-md overflow-hidden group-hover:opacity-75">
-                            <img class="aspect-square object-cover" src="https://cover.nep.li/cover/Kanojo-Okarishimasu.jpg" class=" object-center object-cover">
-                          </div>                       
-                          <div id="body" class="flex flex-col ml-5">
-                          <h4 id="name" class="text-xl font-semibold mb-2">Rent A GF</h4>
-                          <p id="description" class="text-gray-800 mt-2">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                          <div class="flex mt-5">
-                             <p>Author:</p>
-                             <p class="ml-3 hover:underline text-blue-600">Rugved Joshi</p>
-                          </div>
-                          <div class="flex mt-1">
-                            <p>Status:</p>
-                            <p class="ml-3 text-green-800">Ongoing</p>
-                         </div>
-                          <div class="flex mt-1">
-                            <p>Genre:</p>
-                            <p class="ml-3 hover:underline text-blue-600">Hentai</p> <span class="ml-1">,</span>
-                            <p class="ml-2 hover:underline text-blue-600">Comedy</p>
-                         </div>
-                       </div>
-                    </div>
-                 </div>
-                 <div class="max-w-2xl bg-white border-2 border-gray-300 p-5 rounded-md tracking-wide shadow-lg">
-                    <div id="header" class="grid grid-flow-col"> 
-                        <div class="object-cover aspect-square bg-gray-200 aspect-w-1 aspect-h-1 rounded-md overflow-hidden group-hover:opacity-75">
-                            <img class="aspect-square object-cover" src="https://cover.nep.li/cover/Kanojo-Okarishimasu.jpg" class=" object-center object-cover">
-                          </div>                       
-                          <div id="body" class="flex flex-col ml-5">
-                          <h4 id="name" class="text-xl font-semibold mb-2">Rent A GF</h4>
-                          <p id="description" class="text-gray-800 mt-2">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                          <div class="flex mt-5">
-                             <p>Author:</p>
-                             <p class="ml-3 hover:underline text-blue-600">Rugved Joshi</p>
-                          </div>
-                          <div class="flex mt-1">
-                            <p>Status:</p>
-                            <p class="ml-3 text-red-800">Paused</p>
-                         </div>
-                          <div class="flex mt-1">
-                            <p>Genre:</p>
-                            <p class="ml-3 hover:underline text-blue-600">Hentai</p> <span class="ml-1">,</span>
-                            <p class="ml-2 hover:underline text-blue-600">Comedy</p>
-                         </div>
-                       </div>
-                    </div>
-                 </div> -->
-
+            <div id="searchResults" class="grid gap-2 grid-flow-row">
                  <main class="my-8">
-                  <div class="container mx-auto px-6">
-                      <div class="h-64 rounded-md overflow-hidden bg-cover bg-center" style="background-image: url('')">
-                          <div class="bg-gray-900 bg-opacity-50 flex items-center h-full">
-                              <div class="px-10 max-w-xl">
-                                  <h2 class="text-2xl text-white font-semibold">Popular</h2>
-                                  <p class="mt-2 text-gray-400">Check out the most popular works</p>
-                                  <a href="/popular">
-                                  <button class="flex items-center mt-4 px-3 py-2 bg-blue-600 text-white text-sm uppercase font-medium rounded hover:bg-blue-500 focus:outline-none focus:bg-blue-500">
-                                      <span>Check them out</span>
-                                      <svg class="h-5 w-5 mx-2" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor"><path d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
-                                  </button>
-                                </a>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="md:flex mt-8 md:-mx-4">
-                          <div class="w-full h-64 md:mx-4 rounded-md overflow-hidden bg-cover bg-center md:w-1/2" style="background-image: url('')">
-                              <div class="bg-gray-900 bg-opacity-50 flex items-center h-full">
-                                  <div class="px-10 max-w-xl">
-                                      <h2 class="text-2xl text-white font-semibold">Genre 1</h2>
-                                      <p class="mt-2 text-gray-400">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore facere provident molestias ipsam sint voluptatum pariatur.</p>
-                                      <button class="flex items-center mt-4 text-white text-sm uppercase font-medium rounded hover:underline focus:outline-none">
-                                          <span>Check them out</span>
-                                          <svg class="h-5 w-5 mx-2" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor"><path d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
-                                      </button>
-                                  </div>
-                              </div>
-                          </div>
-                          <div class="w-full h-64 mt-8 md:mx-4 rounded-md overflow-hidden bg-cover bg-center md:mt-0 md:w-1/2" style="background-image: url('')">
-                              <div class="bg-gray-900 bg-opacity-50 flex items-center h-full">
-                                  <div class="px-10 max-w-xl">
-                                      <h2 class="text-2xl text-white font-semibold">Genre 2</h2>
-                                      <p class="mt-2 text-gray-400">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore facere provident molestias ipsam sint voluptatum pariatur.</p>
-                                      <button class="flex items-center mt-4 text-white text-sm uppercase font-medium rounded hover:underline focus:outline-none">
-                                          <span>Check them out</span>
-                                          <svg class="h-5 w-5 mx-2" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor"><path d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
-                                      </button>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
                       <div class="mt-16">
                           <h3 class="text-gray-600 text-2xl font-medium dark:text-gray-100">For You:</h3>
                           <div id="" class="mt-6 grid grid-cols-2 dark:text-white gap-y-10 gap-x-6 md:grid-cols-3 lg:grid-cols-5 xl:gap-x-8">
