completed user search

--- a/html/Csearch.html
+++ b/html/Csearch.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
     <link href="/css/output.css" rel="stylesheet">
-    <title>Your search results</title>
+    <title>Search for users</title>
 </head>
 <body class="dark:bg-black" >
 
@@ -174,111 +174,64 @@
     <div class="object-cover hidden aspect-square bg-gray-200 aspect-w-1 aspect-h-1 rounded-md overflow-hidden group-hover:opacity-75">
       <img class="aspect-square object-cover object-center" src="${cover}" >
     </div>     
-<div class="h-fit"></div>
-		<!-- the card -->
-        <a href="http://localhost:7001/user/MaxTGM">
-		<div class="max-w-3xl w-full mx-auto z-10">
-            <div class="flex flex-col">
-                <div class="bg-white border border-white shadow-lg  rounded-3xl p-4 m-4">
-                    <div class="flex-none sm:flex">
-                        <div class=" relative h-32 w-32   sm:mb-0 mb-3">
-                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimg00.deviantart.net%2F1614%2Fi%2F2011%2F273%2F8%2F5%2Felectric_dragon_by_insanable-d4bczwp.jpg&f=1&nofb=1" alt="aji" class=" w-32 h-32 object-cover rounded-2xl">
-                        </div>
-                        <div class="flex-auto sm:ml-5 justify-evenly">
-                            <div class="flex items-center justify-between sm:mt-2">
-                                <div class="flex items-center">
-                                    <div class="flex flex-col">
-                                        <div class="w-full flex-none text-lg text-gray-800 font-bold leading-none">Electric Dragon</div>
-                                        <span class="mr-3  font-bold text-blue-500 ">Aritist</span>
-                                            <!-- <span class="mr-3 border-r border-gray-200  max-h-0"></span><span>Cochin, IND</span> -->
-                                        <div class="flex-auto text-gray-500 my-1">
-                                            <span class="mr-3 ">Description.</span>
-                                            <!-- <span class="mr-3 border-r border-gray-200  max-h-0"></span><span>Cochin, IND</span> -->
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                                <div class="flex pt-2  text-sm text-gray-500">
-                                    <div class="flex-1 inline-flex items-center">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20"
-                                            fill="currentColor">
-                                            <path
-                                                d="M8 9a3 3 0 100-6 3 3 0 000 6zM8 11a6 6 0 016 6H2a6 6 0 016-6zM16 7a1 1 0 10-2 0v1h-1a1 1 0 100 2h1v1a1 1 0 102 0v-1h1a1 1 0 100-2h-1V7z">
-                                            </path>
-                                        </svg>
-                                        <p class="">1.2k Followers</p>
-                                    </div>
-                                    <div class="flex-1 inline-flex items-center">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20"
-                                            fill="currentColor">
-                                            <path fill-rule="evenodd"
-                                                d="M12.395 2.553a1 1 0 00-1.45-.385c-.345.23-.614.558-.822.88-.214.33-.403.713-.57 1.116-.334.804-.614 1.768-.84 2.734a31.365 31.365 0 00-.613 3.58 2.64 2.64 0 01-.945-1.067c-.328-.68-.398-1.534-.398-2.654A1 1 0 005.05 6.05 6.981 6.981 0 003 11a7 7 0 1011.95-4.95c-.592-.591-.98-.985-1.348-1.467-.363-.476-.724-1.063-1.207-2.03zM12.12 15.12A3 3 0 017 13s.879.5 2.5.5c0-1 .5-4 1.25-4.5.5 1 .786 1.293 1.371 1.879A2.99 2.99 0 0113 13a2.99 2.99 0 01-.879 2.121z"
-                                                clip-rule="evenodd"></path>
-                                        </svg>
-                                        <p class="">14 Works</p>
-                                    </div>
+<div id="searchResults" class="h-fit">
+<p class="text-center text-gray-500 text-xl">Search for users</p>
 
-                                    <button  class="flex-no-shrink bg-green-400 hover:bg-green-500 px-5 ml-4 py-2 text-xs shadow-sm hover:shadow-lg font-medium tracking-wider border-2 border-green-300 hover:border-green-500 text-white rounded-full transition ease-in duration-300">Request</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </a>
-        <a href="http://localhost:7001/user/MaxTGM">
-            <div class="max-w-3xl w-full mx-auto z-10">
-                <div class="flex flex-col">
-                    <div class="bg-white border border-white shadow-lg  rounded-3xl p-4 m-4">
-                        <div class="flex-none sm:flex">
-                            <div class=" relative h-32 w-32   sm:mb-0 mb-3">
-                                <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimg00.deviantart.net%2F1614%2Fi%2F2011%2F273%2F8%2F5%2Felectric_dragon_by_insanable-d4bczwp.jpg&f=1&nofb=1" alt="aji" class=" w-32 h-32 object-cover rounded-2xl">
-                            </div>
-                            <div class="flex-auto sm:ml-5 justify-evenly">
-                                <div class="flex items-center justify-between sm:mt-2">
-                                    <div class="flex items-center">
-                                        <div class="flex flex-col">
-                                            <div class="w-full flex-none text-lg text-gray-800 font-bold leading-none">Electric Dragon</div>
-                                            <span class="mr-3  font-bold text-blue-500 ">Writer</span>
-                                                <!-- <span class="mr-3 border-r border-gray-200  max-h-0"></span><span>Cochin, IND</span> -->
-                                            <div class="flex-auto text-gray-500 my-1">
-                                                <span class="mr-3 ">Description.</span>
-                                                <!-- <span class="mr-3 border-r border-gray-200  max-h-0"></span><span>Cochin, IND</span> -->
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                    <div class="flex pt-2  text-sm text-gray-500">
-                                        <div class="flex-1 inline-flex items-center">
-                                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20"
-                                                fill="currentColor">
-                                                <path
-                                                    d="M8 9a3 3 0 100-6 3 3 0 000 6zM8 11a6 6 0 016 6H2a6 6 0 016-6zM16 7a1 1 0 10-2 0v1h-1a1 1 0 100 2h1v1a1 1 0 102 0v-1h1a1 1 0 100-2h-1V7z">
-                                                </path>
-                                            </svg>
-                                            <p class="">1.2k Followers</p>
-                                        </div>
-                                        <div class="flex-1 inline-flex items-center">
-                                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20"
-                                                fill="currentColor">
-                                                <path fill-rule="evenodd"
-                                                    d="M12.395 2.553a1 1 0 00-1.45-.385c-.345.23-.614.558-.822.88-.214.33-.403.713-.57 1.116-.334.804-.614 1.768-.84 2.734a31.365 31.365 0 00-.613 3.58 2.64 2.64 0 01-.945-1.067c-.328-.68-.398-1.534-.398-2.654A1 1 0 005.05 6.05 6.981 6.981 0 003 11a7 7 0 1011.95-4.95c-.592-.591-.98-.985-1.348-1.467-.363-.476-.724-1.063-1.207-2.03zM12.12 15.12A3 3 0 017 13s.879.5 2.5.5c0-1 .5-4 1.25-4.5.5 1 .786 1.293 1.371 1.879A2.99 2.99 0 0113 13a2.99 2.99 0 01-.879 2.121z"
-                                                    clip-rule="evenodd"></path>
-                                            </svg>
-                                            <p class="">14 Works</p>
-                                        </div>
-    
-                                        <button  class="flex-no-shrink bg-green-400 hover:bg-green-500 px-5 ml-4 py-2 text-xs shadow-sm hover:shadow-lg font-medium tracking-wider border-2 border-green-300 hover:border-green-500 text-white rounded-full transition ease-in duration-300">Request</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </a>
+  <!-- <a href="http://localhost:7001/user/MaxTGM">
+  <div class="max-w-3xl w-full mx-auto z-10">
+          <div class="flex flex-col">
+              <div class="bg-white border border-white shadow-lg  rounded-3xl p-4 m-4">
+                  <div class="flex-none sm:flex">
+                      <div class=" relative h-32 w-32   sm:mb-0 mb-3">
+                          <img src="https://zduoakccvlarenfacitl.supabase.co/storage/v1/object/public/users/7a2750e7-0d25-4a40-9236-ce7a42d61bd2/profile/pfp.jpg" alt="aji" class=" w-32 h-32 object-cover rounded-2xl">
+                      </div>
+                      <div class="flex-auto sm:ml-5 justify-evenly">
+                          <div class="flex items-center justify-between sm:mt-2">
+                              <div class="flex items-center">
+                                  <div class="flex flex-col">
+                                      <div class="w-full flex-none text-lg text-gray-800 font-bold leading-none">Electric Dragon</div>
+                                      <span class="mr-3  font-bold text-blue-500 ">Aritist</span>
+                                      <div class="flex-auto text-gray-500 my-1">
+                                          <span class="mr-3 ">Description.</span>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                              <div class="flex pt-2  text-sm text-gray-500">
+                                  <div class="flex-1 inline-flex items-center">
+                                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20"
+                                          fill="currentColor">
+                                          <path
+                                              d="M8 9a3 3 0 100-6 3 3 0 000 6zM8 11a6 6 0 016 6H2a6 6 0 016-6zM16 7a1 1 0 10-2 0v1h-1a1 1 0 100 2h1v1a1 1 0 102 0v-1h1a1 1 0 100-2h-1V7z">
+                                          </path>
+                                      </svg>
+                                      <p class="">1.2k Followers</p>
+                                  </div>
+                                  <div class="flex-1 inline-flex items-center">
+                                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20"
+                                          fill="currentColor">
+                                          <path fill-rule="evenodd"
+                                              d="M12.395 2.553a1 1 0 00-1.45-.385c-.345.23-.614.558-.822.88-.214.33-.403.713-.57 1.116-.334.804-.614 1.768-.84 2.734a31.365 31.365 0 00-.613 3.58 2.64 2.64 0 01-.945-1.067c-.328-.68-.398-1.534-.398-2.654A1 1 0 005.05 6.05 6.981 6.981 0 003 11a7 7 0 1011.95-4.95c-.592-.591-.98-.985-1.348-1.467-.363-.476-.724-1.063-1.207-2.03zM12.12 15.12A3 3 0 017 13s.879.5 2.5.5c0-1 .5-4 1.25-4.5.5 1 .786 1.293 1.371 1.879A2.99 2.99 0 0113 13a2.99 2.99 0 01-.879 2.121z"
+                                              clip-rule="evenodd"></path>
+                                      </svg>
+                                      <p class="">14 Works</p>
+                                  </div>
+  
+                                  <button  class="flex-no-shrink bg-green-400 hover:bg-green-500 px-5 ml-4 py-2 text-xs shadow-sm hover:shadow-lg font-medium tracking-wider border-2 border-green-300 hover:border-green-500 text-white rounded-full transition ease-in duration-300">Request</button>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </a> -->
+
+
+</div>
+		<!-- the card -->
     <main class="my-8">
         <div class="container mx-auto px-6">
-            <div id="searchResults" class="grid gap-2 grid-flow-row">
+            <div class="grid gap-2 grid-flow-row">
                  <main class="my-8">
                       <div class="mt-16">
                           <h3 class="text-gray-600 text-2xl font-medium dark:text-gray-100">For You:</h3>
@@ -353,7 +306,7 @@
       <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
       <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
       <script src="/js/init.js" type="module"></script>
-      <script defer src="/js/search.js" type="module"></script>
+      <script defer src="/js/Csearch.js" type="module"></script>
 </body>
 </html>
 
