--- a/html/readNovel.html
+++ b/html/readNovel.html
@@ -164,7 +164,7 @@
 		<div class="flex w-full items-center font-sans px-4 py-2">
 			<img id="creatorPfp" class="w-10 h-10 rounded-full mr-4" src="http://i.pravatar.cc/300" alt="Avatar of Author">
 			<div class="flex-1 px-2">
-				<p id="creatorUsername" class="text-base text-white font-bold md:text-xl leading-none mb-2"></p>
+				<p id="creatorUsername" class="text-base text-black font-bold md:text-xl leading-none mb-2"></p>
 				<p id="creatorDescription" class="text-gray-600 text-xs md:text-base">description of author <a class="text-green-500 no-underline hover:underline" href="">his profile</a></p>
 			</div>
 			<div class="justify-end">
