--- a/html/readComic.html
+++ b/html/readComic.html
@@ -303,7 +303,7 @@
 
 	<script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 	<script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-	<script defer src="/js/init.js"></script>
+	<script defer src="/js/init.js" type="module"></script>
 	<script defer src="/js/readComic.js" type="module"></script>
 
 </body>
