--- a/html/search.html
+++ b/html/search.html
@@ -111,32 +111,12 @@
       <a href="/popular" class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Popular</a>
     </div>
   </div>
-  <script>document.getElementById('togglemebutton').onclick = function() {
-    document.getElementById("resultnav").classList.toggle("hidden");
-  }
-  
-  //document.getElementById('togglemebutton').onclick = function () {
-  //  document.getElementById("toggleme").classList.toggle("hidden");
-  //}
-  
-  
-  const toggleprofile = document.getElementById("toggleprofile");
-  const resultprofile = document.getElementById("resultprofile");
-  [...document.querySelectorAll('body')].forEach(el => {
-    el.addEventListener('click', event => {
-      if (event.target.parentElement.id !== "toggleprofile") {
-        console.log(event.target.parentElement.id)
-        resultprofile.classList.add("hidden")
-      }else{
-      resultprofile.classList.toggle("hidden")}
-    })
-  })</script>
 </nav>
 <header class="flex dark:bg-background mt-2 border-t-0 border-x-0 dark:border-none w-screen items-center text-center justify-center gap-7 border h-16 z-40">
-  <p id="filterAll" class="filterActive text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">ALL</p>
-  <p id="filterNovels" class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Novels</p>
-  <p id="filterComics" class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Comics</p>
-  <a href="/Csearch" class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Creators</a>
+  <p id="filterAll" class="rounded-md px-3 text-base font-bold uppercase hover:underline cursor-pointer dark:text-gray-100 bg-black dark:bg-white text-white dark:text-black">ALL</p>
+  <p id="filterNovels" class="rounded-md px-3 text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Novels</p>
+  <p id="filterComics" class="rounded-md px-3 text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Comics</p>
+  <a href="/Csearch" class="rounded-md px-3 text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Creators</a>
 </header>
 
 <!-- component -->
@@ -243,32 +223,6 @@
                               </div>
                           </div>
                       </div>
-                      <div class="md:flex mt-8 md:-mx-4">
-                          <div class="w-full h-64 md:mx-4 rounded-md overflow-hidden bg-cover bg-center md:w-1/2" style="background-image: url('')">
-                              <div class="bg-gray-900 bg-opacity-50 flex items-center h-full">
-                                  <div class="px-10 max-w-xl">
-                                      <h2 class="text-2xl text-white font-semibold">Genre 1</h2>
-                                      <p class="mt-2 text-gray-400">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore facere provident molestias ipsam sint voluptatum pariatur.</p>
-                                      <button class="flex items-center mt-4 text-white text-sm uppercase font-medium rounded hover:underline focus:outline-none">
-                                          <span>Check them out</span>
-                                          <svg class="h-5 w-5 mx-2" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor"><path d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
-                                      </button>
-                                  </div>
-                              </div>
-                          </div>
-                          <div class="w-full h-64 mt-8 md:mx-4 rounded-md overflow-hidden bg-cover bg-center md:mt-0 md:w-1/2" style="background-image: url('')">
-                              <div class="bg-gray-900 bg-opacity-50 flex items-center h-full">
-                                  <div class="px-10 max-w-xl">
-                                      <h2 class="text-2xl text-white font-semibold">Genre 2</h2>
-                                      <p class="mt-2 text-gray-400">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore facere provident molestias ipsam sint voluptatum pariatur.</p>
-                                      <button class="flex items-center mt-4 text-white text-sm uppercase font-medium rounded hover:underline focus:outline-none">
-                                          <span>Check them out</span>
-                                          <svg class="h-5 w-5 mx-2" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor"><path d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
-                                      </button>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
                       <div class="mt-16">
                           <h3 class="text-gray-600 text-2xl font-medium dark:text-gray-100">For You:</h3>
                           <div id="" class="mt-6 grid grid-cols-2 dark:text-white gap-y-10 gap-x-6 md:grid-cols-3 lg:grid-cols-5 xl:gap-x-8">
@@ -336,6 +290,34 @@
         </div>
     </footer>
 </div>
+
+      <script>
+
+		    var filterAll = document.getElementById("filterAll");
+        var filterNovels = document.getElementById("filterNovels");
+        var filterComics = document.getElementById("filterComics");
+
+        let activeClasses = ['bg-black', 'dark:bg-white', 'text-white', 'dark:text-black'];
+
+        filterAll.addEventListener('click', function() {
+          filterAll.classList.add(...activeClasses);
+          filterNovels.classList.remove(...activeClasses);
+          filterComics.classList.remove(...activeClasses);
+        });
+
+        filterNovels.addEventListener('click', function() {
+          filterAll.classList.remove(...activeClasses);
+          filterNovels.classList.add(...activeClasses);
+          filterComics.classList.remove(...activeClasses);
+        });
+
+        filterComics.addEventListener('click', function() {
+          filterAll.classList.remove(...activeClasses);
+          filterNovels.classList.remove(...activeClasses);
+          filterComics.classList.add(...activeClasses);
+        });
+
+      </script>
 
 
       <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
