--- a/html/search.html
+++ b/html/search.html
@@ -294,7 +294,7 @@
         var filterNovels = document.getElementById("filterNovels");
         var filterComics = document.getElementById("filterComics");
 
-        let activeClasses = ['bg-black', 'dark:bg-white', 'text-white', 'dark:text-black'];
+        let activeClasses = ['bg-black', 'dark:bg-white', 'text-white', 'dark:text-base'];
 
         filterAll.addEventListener('click', function() {
           filterAll.classList.add(...activeClasses);
