--- a/html/home.html
+++ b/html/home.html
@@ -193,6 +193,16 @@
             </div>
           </div> -->
         </div>
+
+        <br>
+        <br>
+
+        <div id="recommendationDiv">
+          <h2 class="text-2xl font-extrabold tracking-tight text-gray-900 dark:text-white"> Recommended For you:</h2>
+      
+          <div id="recommendations" class="mt-6 grid grid-cols-2 dark:text-white gap-y-10 gap-x-6 md:grid-cols-3 lg:grid-cols-5 xl:gap-x-8"></div>
+        </div>
+
       </div>
 
       <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
