--- a/html/genre.html
+++ b/html/genre.html
@@ -136,7 +136,7 @@
 </header>
     <div class="bg-transparent w-screen dark:bg-background" >
         <div class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8 dark:text-white">
-          <h2 class="text-2xl font-extrabold tracking-tight text-gray-900 dark:text-white"> Recently published:</h2>
+          <h2 id="sectionHeading" class="text-2xl font-extrabold tracking-tight text-gray-900 dark:text-white"></h2>
       
           <div id="recentlyPub" class="mt-6 grid grid-cols-2 dark:text-white gap-y-10 gap-x-6 md:grid-cols-3 lg:grid-cols-5 xl:gap-x-8">
             <!-- <div class="group relative">
@@ -156,6 +156,11 @@
           </div> -->
         </div>
       </div>
+
+      <script>
+        let genre = window.location.pathname.split( '/' ).pop();
+        document.getElementById('sectionHeading').innerHTML = `${genre.toUpperCase()} series:`;
+      </script>
 
       <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
       <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
