--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -84,7 +84,19 @@
               <span class="ml-4">Profile</span>
             </a>
           </li>
-            <!--  <li class="relative px-6 py-3">
+          <li class="relative px-6 py-3">
+            <a class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
+              href="/ad">
+              <svg class="w-5 h-5" aria-hidden="true" fill="none" stroke-linecap="round" stroke-linejoin="round"
+                stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
+                <path
+                  d="M15 15l-2 5L9 9l11 4-5 2zm0 0l5 5M7.188 2.239l.777 2.897M5.136 7.965l-2.898-.777M13.95 4.05l-2.122 2.122m-5.657 5.656l-2.12 2.122">
+                </path>
+              </svg>
+              <span class="ml-4">Advertisement</span>
+            </a>
+          </li>
+            <!-- <li class="relative px-6 py-3"> 
             <a class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
               href="charts.html">
               <svg class="w-5 h-5" aria-hidden="true" fill="none" stroke-linecap="round" stroke-linejoin="round"
@@ -176,15 +188,15 @@
                 </li>
               </ul>
             </template>
-          </li>
+          </li> -->
         </ul>
-        <div class="px-6 my-6">
+        <!-- <div class="px-6 my-6">
           <button
             class="flex items-center justify-between w-full px-4 py-2 text-sm font-medium leading-5 text-white transition-colors duration-150 bg-cyan-600 border border-transparent rounded-lg active:bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:shadow-outline-cyan">
             Create account
             <span class="ml-2" aria-hidden="true">+</span>
           </button>
-        </div> -->
+        </div>  -->
       </div>
     </aside>
     <!-- Mobile sidebar -->
