--- a/html/popular.html
+++ b/html/popular.html
@@ -116,8 +116,8 @@
 <!-- component -->
 
 <div  class="bg-white dark:bg-background"> 
-    <header class="flex mt-5 border-t-0 w-screen items-center text-center justify-center gap-7 border h-16">
-        <p id="filterAll" class="rounded-md px-3 text-base font-bold uppercase hover:underline dark:text-white cursor-pointer">ALL</p>
+    <header class="flex mt-5 border-t-0 w-screen items-center text-center justify-center gap-7 border h-fit pb-4">
+        <p id="filterAll" class="rounded-md transition-transform px-3 text-base font-bold uppercase hover:underline dark:text-white cursor-pointer">ALL</p>
         <p id="filterComics" class="rounded-md px-3 text-base font-bold uppercase hover:underline dark:text-white cursor-pointer">Web Comics</p>
         <p id="filterNovels" class="rounded-md px-3 text-base font-bold uppercase hover:underline dark:text-white cursor-pointer">Web Novels</p>
     </header>
