--- a/html/popular.html
+++ b/html/popular.html
@@ -446,7 +446,7 @@
     var filterComics = document.getElementById("filterComics");
 
     
-    let activeClasses = ['bg-black', 'dark:bg-white', 'text-white', 'dark:text-black' , 'px-3' , 'transition'];
+    let activeClasses = ['bg-black', 'dark:bg-white', 'text-white', 'dark:text-black' , 'px-3' , 'transition-colors' , 'duration-200' ];
     
     filterAll.classList.add(...activeClasses);
 
