fixed read count spam

--- a/html/popular.html
+++ b/html/popular.html
@@ -116,19 +116,19 @@
 <!-- component -->
 
 <div  class="bg-white dark:bg-background"> 
-    <header class="flex mt-5 border-t-0 w-screen items-center text-center justify-center gap-7 border h-fit pb-4">
+    <header class="flex mt-5 border-t-0 w-screen items-center text-center justify-center gap-7 border h-fit p-4">
         <p id="filterAll" class="rounded-md transition-transform px-3 text-base font-bold uppercase hover:underline dark:text-white cursor-pointer">ALL</p>
         <p id="filterComics" class="rounded-md px-3 text-base font-bold uppercase hover:underline dark:text-white cursor-pointer">Web Comics</p>
         <p id="filterNovels" class="rounded-md px-3 text-base font-bold uppercase hover:underline dark:text-white cursor-pointer">Web Novels</p>
     </header>
-    <header class="flex  w-screen items-center text-center justify-center gap-7 border-t-0 border h-8 overflow-y-hidden">
+    <!-- <header class="flex  w-screen items-center text-center justify-center gap-7 border-t-0 border h-8 overflow-y-hidden">
       <p class="text-sm underline text-cyan-900 uppercase font-bold cursor-pointer">Latest</p>
+      <p class="rounded-md px-3 text-base font-bold uppercase hover:underline dark:text-white cursor-pointer">Comedy</p>
       <p class="text-sm hover:underline text-gray-900 uppercase  cursor-pointer">Comedy</p>
       <p class="text-sm hover:underline text-gray-900 uppercase  cursor-pointer">Comedy</p>
       <p class="text-sm hover:underline text-gray-900 uppercase  cursor-pointer">Comedy</p>
       <p class="text-sm hover:underline text-gray-900 uppercase  cursor-pointer">Comedy</p>
-      <p class="text-sm hover:underline text-gray-900 uppercase  cursor-pointer">Comedy</p>
-  </header>
+  </header> -->
     
     <main class="max-w-5xl mx-auto">
 
