--- a/html/advertisement.html
+++ b/html/advertisement.html
@@ -583,7 +583,7 @@
                                         </div>
                                     </template>
                                     <div class="flex-1">
-                                        <input type="text" x-model="search" x-ref="search_input"
+                                        <input id="searchBar" type="text" x-model="search" x-ref="search_input"
                                             @input.debounce.400ms="goSearch();" placeholder="Search"
                                             class="w-full border-0 focus:border-0 focus:outline-none focus:ring-0 py-1 px-0">
                                         <div x-show="showSelector" class="absolute left-0 bg-white z-30 w-full rounded-b-md font-medium">
@@ -765,7 +765,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
     <script src="/js/init.js" type="module"></script>
-    <script defer src="/js/dseries.js" type="module"></script>
+    <script defer src="/js/advertisement.js" type="module"></script>
     <script>
 
     </script>
